TO DO :
Add : MultiContent PKGDIR/PS3_GMXX/PK3_EXTRA/INSDIR

v1.41
Fix : IRD build, sometimes the iso header length was too big.
Add : Decrypt EDAT/SDAT.
Fix : JB md5 check, it remove the ultimate dot from filename.
Add : Dump encrypted and decrypted Blu-ray with 3k3y extra header.
Change : "Dump disc key" uses the original 3k3y name of header "Encrypted 3K ISO" instead of "Encrypted 3K RIP".
Add : Dump disc key for redump.org. It generates the same files as GetKey-r2-GameOS.
Fix : Freeze when creating directory inside ntfs/exFAT devices.

v1.40
Fix : Dock buttons when the window is docked to the left.
Fix : IRD build of backups with PKGDIR.
Fix : Shortcut pkg.
Add : Scans sub-folders to find backups.
Add : Support fw 4.88C.
Add : Updated mamba v8.40 from https://github.com/aldostools/Mamba June 06, 2021.

v1.39
Fix : Display issue with game title containing new line character '\n'.
Fix : No more freeze when the firmware is unknown/new. I'm not sure how I fixed it tho.
Fix : XMB UI won't display 'adjust your filters' on boot of MGZ if you unchecked 'PS3' filter.
Add : Support new/different PS2 CONFIG from /dev_hdd0/game/PS2CONFIG. They are displayed with the prefix '[DB]'.
Add : IRD check is more accurate. See notes (3)
Add : Updated mamba to 8.3 from https://github.com/aldostools/Mamba
Add : OffsetFinder support every symbols/hash needed to build cobra & mamba 8.3
Add : Support exFAT. See notes (2).
Add : Support HEN & CFW 4.87C.
Add : Logs option. It saves loading logs at "/dev_hdd0/tmp/mgz.log".
Add : Debug option. It slows the messages displayed on screen during loadings.
Add : multiMAN payload is now firmware independent.
Add : New CUSTOM PS2 CONFIG files from webMAN MOD by aldostools December 14, 2020. Special thanks to kozarovv.
Add : New ps2 widescreen pnatchs from pcsx2.net forum January 13, 2021.
Add : Reset position of filter box.
Add : Reworked the game updates manager.
Add : dev_bdvd is displayed.
Add BDVD option : Dump encrypted Blu-Ray disc.