@@ -2,6 +2,7 @@ TO DO :
 Add : MultiContent PKGDIR/PS3_GMXX/PK3_EXTRA/INSDIR
 
 v1.41
+Add : On dump BR functions, it checks if sys_storage_read succeed. See notes (1).
 Fix : IRD build, sometimes the iso header length was too big.
 Add : Decrypt EDAT/SDAT.
 Fix : JB md5 check, it remove the ultimate dot from filename.
@@ -9,6 +10,12 @@ Add : Dump encrypted and decrypted Blu-ray with 3k3y extra header.
 Change : "Dump disc key" uses the original 3k3y name of header "Encrypted 3K ISO" instead of "Encrypted 3K RIP".
 Add : Dump disc key for redump.org. It generates the same files as GetKey-r2-GameOS.
 Fix : Freeze when creating directory inside ntfs/exFAT devices.
+
+Notes:
+(1) This is mostly for damaged disc, some sectors might be unreadable because of scratches.
+It will try to read the damaged sector 30 times. 
+If it's still no readable, the process will continue but the ird creation will be skipped.
+The user still have the possibility to cancel it.
 
 v1.40
 Fix : Dock buttons when the window is docked to the left.
